tests/snapshots/instas__blank_line_splits_stripes_ts.snap
---
source: tests/instas.rs
expression: "format! (\"{e:?}\")"
---
  x in comment on line 2
  |-> in Y-Statement starting on line 2
  `-> Y-Statement is missing two paragraphs.
   ,-[4:1]
 1 | In the context of <use case/user story u>, we faced <concern c>.
 2 | 
 3 | We decided for <option o>, and neglected <other options>.
 4 |    
   : ^|^
   :  `-- expected "We did this to achieve <..>, accepting <..>."
   `----
