tests/snapshots/instas__early_termination_triple_newline.snap
---
source: tests/instas.rs
expression: v
---
[
    (
        2,
        YAdr {
            date: 2023-11-30,
            title: "2023-11-30 bar-baz",
            in_context: "<use case/user story u>",
            facing_concern: "<concern c>",
            chosen_option: "<option o>",
            neglected_options: "<other options>",
            to_achieve: "<system qualities/desired consequences>",
            accepted_downsides: "<downside d/undesired consequences>",
            because: "<additional rationale>",
            tail: Some(
                "Here's a tail.",
            ),
            changes: [],
        },
    ),
]
